--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "express": "^4.19.2",
     "http-status": "^1.7.4",
     "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "lint-staged": "^15.1.0",
     "mongoose": "^8.3.5",
     "validator": "^13.12.0",
-    "zod": "^3.23.8",
-    "lint-staged": "^15.1.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
     "@types/validator": "^13.11.10",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
@@ -40,9 +42,9 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.2.0",
+    "husky": "^8.0.0",
     "prettier": "^3.2.5",
     "ts-node-dev": "^2.0.0",
-    "husky": "^8.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0"
   }
